make consistance state with pro-web

--- a/culture_city.ini
+++ b/culture_city.ini
@@ -1,8 +1,9 @@
 [uwsgi]
 project = culture-city
 username = www-data
+groupname = www-data
 #base =  /var/www/%(project)
-base = /home/evgen/git_repo/city-city
+base = /var/www/city-city
 
 chdir = %(base)
 module = culture-city:app
@@ -10,9 +11,9 @@ module = culture-city:app
 master = true
 processes = 5
 uid=%(username)
+gid=%(group)
 socket = %(base)/%(project).sock
-chmod-socket = 660
+chmod-socket = 755
 die-on-term = true
 vacuum = true
-daemonize=/var/log/uwsgi/culture_city.log
-
+daemonize=/var/www/city-city/uwsgi/culture_city.log
