correct directory in culture_city.ini file

--- a/culture_city.ini
+++ b/culture_city.ini
@@ -3,7 +3,6 @@ project = culture-city
 username = www-data
 groupname = www-data
 #base =  /var/www/%(project)
-base = /var/www/city-city
 
 chdir = %(base)
 module = culture-city:app
@@ -16,4 +15,4 @@ socket = %(base)/%(project).sock
 chmod-socket = 755
 die-on-term = true
 vacuum = true
-daemonize=/var/www/city-city/uwsgi/culture_city.log
+daemonize=/var/www/%(project)/uwsgi/culture_city.log
