--- a/culture_city.ini
+++ b/culture_city.ini
@@ -2,7 +2,7 @@
 project = culture-city
 username = www-data
 groupname = www-data
-#base =  /var/www/%(project)
+base =  /var/www/%(project)
 
 chdir = %(base)
 module = culture-city:app
